# ClinicAgent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_clinic_tables.py  0002_create_agent_session_states.py  0003_create_locations_and_handoffs.py
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  flows.js  main.jsx  styles.css
client/src/assets/: clinic-agent-1.avif
docs/: architecture.md
src/clinic_agent/: config.py  main.py
src/clinic_agent/agent/: orchestrator.py  skills.py
src/clinic_agent/api/: routes.py  schemas.py
src/clinic_agent/db/: models.py  repository.py  seed.py  session.py  session_state.py
src/clinic_agent/llm/: base.py  factory.py  fake_provider.py  gemini_provider.py  openai_provider.py
src/clinic_agent/memory/: store.py
src/clinic_agent/prompts/: system_prompt.py
src/clinic_agent/tools/: base.py  client.py  registry.py  scheduling.py
src/clinic_agent_mcp/: __init__.py  server.py
src/clinic_agent_mcp/tools/: __init__.py  appointments.py  dependencies.py  handoff.py  locations.py  patients.py  references.py  slots.py
tests/: conftest.py  test_api.py  test_mcp_tools.py  test_memory.py  test_orchestrator.py  test_tools.py
